--- a/style.css
+++ b/style.css
@@ -458,7 +458,8 @@ font-weight: bold;
     "skills-exp1 skills-exp1"
     "skills-exp2 skills-exp2"
     "exp exp"
-    "hobby hobby";
+    "hobby hobby"
+    "links links";
 
     width:90%;
   }
